# gitflattener

./: README.md  pyproject.toml
src/gitflattener/: __main__.py
